# Audio-Triangulation

./: CMakeLists.txt  CopyOfCMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  sin_table.h  window.ipynb
src/: buffer.c  buffer.h  constants.h  correlations.c  correlations.h  main.c  microphones.c  microphones.h  rolling_buffer.c  rolling_buffer.h  sample_compute.c  sample_compute.h  vga_debug.c  vga_debug.h  window_function.h
src/components/: buffer.c  buffer.h  constants.h  correlations.c  correlations.h  dma_sampler.c  dma_sampler.h  microphones.c  microphones.h  point.h  rolling_buffer.c  rolling_buffer.h  window_function.h
src/components/vga/: vga.h  vga_correlations.h  vga_heatmap.h  vga_text.h  vga_waveforms.h
src/lib/pio/: rgb.pio
src/pico/: pt_cornell_rp2040_v1_3.h
